[gd_scene load_steps=4 format=3 uid="uid://daml3avi4qrro"]

[ext_resource type="Texture2D" uid="uid://cn6843bxolvgu" path="res://temp_icons/temp_ability_icon.png" id="1_5ugol"]
[ext_resource type="Script" uid="uid://dit5wg2dgqk2d" path="res://trait_display.gd" id="1_vm0l2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg2on"]
size = Vector2(306, 70)

[node name="trait_display" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 314.0
offset_bottom = 63.0
script = ExtResource("1_vm0l2")

[node name="transparent_background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 6.0
offset_right = 237.0
offset_bottom = 52.0
mouse_filter = 2
color = Color(0.254902, 0.254902, 0.254902, 0.380392)

[node name="trait_name" type="RichTextLabel" parent="transparent_background"]
layout_mode = 0
offset_left = 72.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 22
text = "TraitName"

[node name="trait_icon" type="Sprite2D" parent="."]
position = Vector2(28, 29)
scale = Vector2(2.29437, 2.29437)
texture = ExtResource("1_5ugol")

[node name="current_count_background" type="ColorRect" parent="trait_icon"]
offset_left = 13.9472
offset_top = -7.84528
offset_right = 53.9472
offset_bottom = 32.1547
scale = Vector2(0.417096, 0.417096)
mouse_filter = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="current_count" type="RichTextLabel" parent="trait_icon/current_count_background"]
layout_mode = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "[center]10[/center]"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(153, 35)
shape = SubResource("RectangleShape2D_pg2on")

[node name="TextInfoBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 1.0
offset_right = 421.0
offset_bottom = 179.0
color = Color(0, 0, 0, 0.243137)

[node name="RichTextLabel" type="RichTextLabel" parent="TextInfoBackground"]
layout_mode = 0
offset_right = 177.0
offset_bottom = 177.0
theme_override_font_sizes/normal_font_size = 17
text = "Example text for information regarding trait buffs"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
